waybar: Ensure there is a gap arround the center modules

--- a/home-manager-modules/waybar/style.css
+++ b/home-manager-modules/waybar/style.css
@@ -115,6 +115,15 @@ window#waybar.empty #window {
     margin-right: 0;
 }
 
+/*
+ * Hacky way to ensure that there is a gap arround the center modules,
+ * if the screen is too small.
+ */
+.modules-center {
+    margin-right: 8px;
+    margin-left: 8px;
+}
+
 #clock {
     /* background-color: #64727D; */
 }
